--- a/bonus 2/css/style.css
+++ b/bonus 2/css/style.css
@@ -72,6 +72,7 @@ h5 {
 
 .levels {
   display: flex;
+  margin-right: 13px;
 }
 
 .select-selected {
@@ -216,6 +217,7 @@ footer {
   }
   h2 {
     font-size: 20px;
+    padding-bottom: 7px;
   }
   .dati {
     text-align: center;
@@ -266,6 +268,10 @@ footer {
 
   #levels {
     margin-right: 0px;
+  }
+
+  .btn {
+    margin-bottom: 5px;
   }
 
   .btn,
