--- a/bonus 2/css/style.css
+++ b/bonus 2/css/style.css
@@ -35,11 +35,18 @@ body {
   }
   50% {
     bottom: 418px;
+    opacity: 1;
   }
+
+  70% {
+    left: 1600px;
+  }
+
   100% {
-    bottom: 498px;
+    bottom: 600px;
     width: 0px;
     left: 1742px;
+    opacity: 0;
   }
 }
 
