--- a/bonus 2/css/style.css
+++ b/bonus 2/css/style.css
@@ -108,12 +108,6 @@ h5 {
   width: 100%;
 }
 
-/* .sceltaLivello {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-} */
-
 .levels {
   display: flex;
   margin-right: 13px;
@@ -255,6 +249,45 @@ footer {
   line-height: 50px;
 }
 
+@media only screen and (max-width: 1440px) {
+  /* navicella */
+  .navicella {
+    position: absolute;
+    bottom: 0px;
+    left: 838px;
+    width: 28px;
+    animation-name: viaggioSpace;
+    animation-duration: 4s;
+  }
+
+  @keyframes viaggioSpace {
+    0% {
+      bottom: 6px;
+      width: 28px;
+      left: 838px;
+    }
+    25% {
+      bottom: 221px;
+      left: 811px;
+      width: 116px;
+    }
+    50% {
+      bottom: 510px;
+      left: 581px;
+      width: 92px;
+      opacity: 1;
+    }
+
+    100% {
+      bottom: 607px;
+      left: 274px;
+      width: 2px;
+      opacity: 0;
+    }
+  }
+  /* fine navicella */
+}
+
 @media only screen and (max-width: 1024px) {
   h1 {
     font-size: 27px;
@@ -284,8 +317,84 @@ footer {
   }
 
   main {
-    background-position: -107px;
+    background-position: -189px;
   }
+
+  /* navicella */
+  .navicella {
+    position: absolute;
+    bottom: 0px;
+    left: 421px;
+    width: 28px;
+    animation-name: viaggioSpace;
+    animation-duration: 4s;
+  }
+
+  @keyframes viaggioSpace {
+    0% {
+      bottom: 6px;
+      width: 28px;
+      left: 421px;
+    }
+    25% {
+      bottom: 221px;
+      left: 490px;
+      width: 116px;
+    }
+    50% {
+      bottom: 510px;
+      left: 500px;
+      width: 92px;
+      opacity: 1;
+    }
+
+    100% {
+      bottom: 607px;
+      left: 274px;
+      width: 2px;
+      opacity: 0;
+    }
+  }
+  /* fine navicella */
+}
+
+@media only screen and (max-width: 616px) {
+  /* navicella */
+  .navicella {
+    position: absolute;
+    bottom: 0px;
+    left: 301px;
+    width: 28px;
+    animation-name: viaggioSpace;
+    animation-duration: 4s;
+  }
+
+  @keyframes viaggioSpace {
+    0% {
+      bottom: 6px;
+      width: 28px;
+      left: 301px;
+    }
+    25% {
+      bottom: 380px;
+      left: 370px;
+      width: 110px;
+    }
+    50% {
+      bottom: 510px;
+      left: 350px;
+      width: 92px;
+      opacity: 1;
+    }
+
+    100% {
+      bottom: 607px;
+      left: 200px;
+      width: 2px;
+      opacity: 0;
+    }
+  }
+  /* fine navicella */
 }
 
 @media only screen and (max-width: 568px) {
