--- a/bonus 2/css/style.css
+++ b/bonus 2/css/style.css
@@ -187,6 +187,8 @@ main {
   border-radius: 8px;
   margin: 2px;
   color: #c9b3da;
+  -webkit-box-shadow: 0px 0px 11px -3px #ffffff70;
+  box-shadow: 0px 0px 11px -3px #ffffff70;
 }
 
 .cella-medium {
@@ -200,6 +202,8 @@ main {
   justify-content: center;
   align-items: center;
   color: #c9b3da;
+  -webkit-box-shadow: 0px 0px 11px -3px #ffffff70;
+  box-shadow: 0px 0px 11px -3px #ffffff70;
 }
 
 .cella-hard {
@@ -213,6 +217,8 @@ main {
   justify-content: center;
   align-items: center;
   color: #c9b3da;
+  -webkit-box-shadow: 0px 0px 11px -3px #ffffff70;
+  box-shadow: 0px 0px 11px -3px #ffffff70;
 }
 
 .cellaCliccata {
