--- a/bonus 2/css/style.css
+++ b/bonus 2/css/style.css
@@ -6,11 +6,11 @@
 
 html {
   position: relative;
+  background-color: #1f054e;
 }
 
 body {
   width: 100%;
-  height: 100vh;
   font-family: "Audiowide", cursive;
 }
 
@@ -56,16 +56,17 @@ body {
 
 header {
   width: 100%;
-  height: 10vh;
+  position: fixed;
+  top: 0;
+  height: 15vh;
   background-color: #210955;
-
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 h1 {
-  font-size: 52px;
+  font-size: 70px;
   margin-right: 17px;
   color: #efe9f5;
 }
@@ -73,6 +74,7 @@ h1 {
 h2 {
   color: #efe9f5;
   margin-right: 10px;
+  font-size: 26px;
 }
 
 h3 {
@@ -89,9 +91,9 @@ h5 {
 }
 
 .intestazione {
-  display: flex;
   justify-content: space-between;
   align-items: center;
+  display: flex;
 }
 
 .title {
@@ -140,13 +142,13 @@ h5 {
 }
 
 main {
-  height: 80vh;
   width: 100%;
-
-  background-image: url(../img/2211.w026.n002.2790B.p1.2790.jpg);
+  height: 75vh;
+  background-image: url(../img/sfondoSpace.jpg);
+  background-repeat: no-repeat;
   object-fit: cover;
   background-size: cover;
-
+  margin-top: 15vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -231,22 +233,15 @@ main {
 .cellaCliccataBomba {
   background-image: url(../img/meteoriteUno.png);
   background-size: cover;
-
   background-color: #2d125c;
-  /* background-image: linear-gradient(
-    to right top,
-    #4d1883,
-    #3d1b73,
-    #2f1b62,
-    #241a51,
-    #1b173f
-  ); */
 }
 
 footer {
   width: 100%;
   height: 5vh;
   position: fixed;
+  bottom: 0;
+  left: 0;
   background-color: #1f054e;
   color: #9993a5;
 }
@@ -255,13 +250,12 @@ footer {
   line-height: 50px;
 }
 
-@media only screen and (max-width: 1440px) {
-  /* navicella */
+@media all and (max-width: 1440px) {
   .navicella {
     position: absolute;
     bottom: 0px;
     left: 838px;
-    width: 28px;
+    width: 0px;
     animation-name: viaggioSpace;
     animation-duration: 4s;
   }
@@ -269,7 +263,7 @@ footer {
   @keyframes viaggioSpace {
     0% {
       bottom: 6px;
-      width: 28px;
+      width: 0px;
       left: 838px;
     }
     25% {
@@ -291,47 +285,38 @@ footer {
       opacity: 0;
     }
   }
-  /* fine navicella */
 }
 
-@media only screen and (max-width: 1024px) {
+@media all and (max-width: 1024px) {
   h1 {
-    font-size: 27px;
+    font-size: 40px;
   }
+}
+
+@media all and (max-width: 768px) {
+  h1 {
+    font-size: 30px;
+    margin-right: 0px;
+  }
+
   h2 {
     font-size: 20px;
-    padding-bottom: 7px;
   }
-  .dati {
-    text-align: center;
-  }
-}
 
-@media only screen and (max-width: 768px) {
   .btn,
   .reset {
-    width: 82px;
+    width: 95px;
   }
 
-  #levels {
-    padding-right: 0px;
-    margin-right: 10px;
+  footer {
+    text-align: center;
   }
 
-  .levels {
-    flex-direction: column;
-  }
-
-  main {
-    background-position: -189px;
-  }
-
-  /* navicella */
   .navicella {
     position: absolute;
     bottom: 0px;
     left: 421px;
-    width: 28px;
+    width: 0px;
     animation-name: viaggioSpace;
     animation-duration: 4s;
   }
@@ -339,7 +324,7 @@ footer {
   @keyframes viaggioSpace {
     0% {
       bottom: 6px;
-      width: 28px;
+      width: 0px;
       left: 421px;
     }
     25% {
@@ -361,16 +346,52 @@ footer {
       opacity: 0;
     }
   }
-  /* fine navicella */
 }
 
-@media only screen and (max-width: 616px) {
-  /* navicella */
+@media all and (max-width: 425px) {
+  .griglia {
+    width: 60vh;
+    height: 60vh;
+  }
+
+  .risultato {
+    margin-bottom: 5vh;
+  }
+
+  .intestazione {
+    flex-direction: column;
+  }
+  h1 {
+    font-size: 24px;
+  }
+
+  h2 {
+    font-size: 15px;
+  }
+
+  .levels {
+    padding: 10px 0;
+    margin-right: 0;
+  }
+
+  .logo {
+    width: 35px;
+  }
+  header {
+    height: 20vh;
+  }
+
+  main {
+    height: 60vh;
+    margin-top: 20vh;
+    background-position-x: -166px;
+  }
+
   .navicella {
     position: absolute;
     bottom: 0px;
-    left: 301px;
-    width: 28px;
+    left: 200px;
+    width: 0px;
     animation-name: viaggioSpace;
     animation-duration: 4s;
   }
@@ -378,67 +399,83 @@ footer {
   @keyframes viaggioSpace {
     0% {
       bottom: 6px;
-      width: 28px;
-      left: 301px;
+      width: 0px;
+      left: 200px;
     }
     25% {
-      bottom: 380px;
-      left: 370px;
-      width: 110px;
+      bottom: 221px;
+      left: 240px;
+      width: 116px;
     }
     50% {
-      bottom: 510px;
-      left: 350px;
+      bottom: 310px;
+      left: 250px;
       width: 92px;
       opacity: 1;
     }
 
     100% {
       bottom: 607px;
-      left: 200px;
+      left: 260px;
       width: 2px;
       opacity: 0;
     }
   }
-  /* fine navicella */
 }
 
-@media only screen and (max-width: 568px) {
-  h1 {
-    margin-right: 0;
-  }
-
-  h2 {
+@media all and (max-width: 425px) {
+  h3 {
     font-size: 16px;
-    margin-right: 0;
   }
+  .cellaCliccata,
+  .cellaCliccataBomba {
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+}
 
-  header {
-    height: 15vh;
+@media all and (max-width: 320px) {
+  h3 {
+    font-size: 13px;
   }
 
   main {
-    height: 75vh;
+    background-position-x: -607px;
   }
 
-  .bottoniStartReset {
-    flex-direction: column;
+  .navicella {
+    position: absolute;
+    bottom: 0px;
+    left: 200px;
+    width: 0px;
+    animation-name: viaggioSpace;
+    animation-duration: 4s;
   }
 
-  #levels {
-    margin-right: 0px;
-  }
+  @keyframes viaggioSpace {
+    0% {
+      bottom: 6px;
+      width: 0px;
+      left: 120px;
+    }
+    25% {
+      bottom: 221px;
+      left: 140px;
+      width: 116px;
+    }
+    50% {
+      bottom: 310px;
+      left: 80px;
+      width: 92px;
+      opacity: 1;
+    }
 
-  .btn {
-    margin-bottom: 5px;
-  }
-
-  .btn,
-  .reset {
-    width: 100px;
-    margin-left: 10px;
-  }
-  main {
-    background-position: -435px;
+    100% {
+      bottom: 607px;
+      left: 70px;
+      width: 2px;
+      opacity: 0;
+    }
   }
 }
